Ignore all pycache?

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 __pycache__/*
-cogs/__pycache__/*
+**/__pycache__/*
 prefixes\.sav
 profiles\.sav
 
 config\.py
 
-cogs/__pycache__/
+**/__pycache__/
